3.0.2
------
(RB=607805)
Refactor ByteString to avoid extra copy in certain cases

(RB=615213)
Make root builder method spec available to request builder specs.

3.0.1
------
(RB=614300)
Allow ServiceGroup to specify clusters with coloVariants.

3.0.0
------
(RB=601892)
Refactor R2 message hierarchy

2.12.7
------
(RB=612350)
Make CookieUtil more robust.

2.12.6
------
(RB=611772)
Dummy version bump up to work around release issue.

2.12.5
------
(RB=607852)
Allow non-clusterVariant in ServiceGroup in d2.src.

(RB=609950)
Catch throwable when invoking callbacks in ZooKeeperAnnouncer#drain

2.12.4
------
(RB=606234)
Fix a bug in ZooKeeperConnectionManager where we didn't retry when
EphemeralStore failed to start.

2.12.3
------
(RB=599052)
Treat query/action parameters with default values as optional in client builders.

(RB=591044)
Address Multiplexer security concerns.
1. Disallow cookies to be passed in the individual requests.
2. Only whitelisted headers are allowed to be specified in the individual requests.
3. Cookies set by each of individual responses will be aggregated at the envelope level.

(RB=570902)
Fix NPE when translating from an Avro GenericRecord with a null value
for field that is non-optional in the Pegasus schema.

Previously, if a source Avro GenericRecord returned a null value
(either because the field did not exist in the writer schema, or the
field has a null value) for a field mapping to a Pegasus field that
was not explicitly marked optional, the translator would throw an
uninformative NPE (i.e., it would crash).

Now, the translator no longer crashes and instead adds no mapping to
the Pegasus DataMap for the field.

------
(RB=600375)
Support enum in compound key for batch update and batch partial update cases.

3.0.0
------
Refactor R2 message hierarhcy
(RB=601892)

2.12.1
------
(RB=597858)
Only process supported methods for non action resources in RequestBuilderSpecGenerator.

(RB=599872)
Add a check for null R2 filter

2.12.0
------